DigicielFull/force-app/main/default/objects/amc__Learning__c/amc__Learning__c.object-meta.xml
<CustomObject>
    <label>Learning</label>
    <nameField>
        <displayFormat>LNG:{00000000}</displayFormat>
        <label>Learning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>