DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Category__c</fullName>
    <inlineHelpText>Identifies the Categories this Learning relates to</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>