DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Learning__c.field-meta.xml
<CustomField>
    <fullName>amc__Learning__c</fullName>
    <inlineHelpText>Identifies the name of the Learning</inlineHelpText>
    <label>Learning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>