DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Learning_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Learning_Notes__c</fullName>
    <inlineHelpText>Detailed notes relating to the Learning</inlineHelpText>
    <label>Learning Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>