DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Opinion__c.field-meta.xml
<CustomField>
    <fullName>amc__Opinion__c</fullName>
    <inlineHelpText>Identifies the Opinion of this Learning</inlineHelpText>
    <label>Opinion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worked Well</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Try Next</fullName>
            </value>
            <value>
                <fullName>Puzzles Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>