DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Reported_By__c.field-meta.xml
<CustomField>
    <fullName>amc__Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role record of the person that identified this Learning</inlineHelpText>
    <label>Reported By</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Learnings</relationshipLabel>
    <relationshipName>Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>