DigicielFull/force-app/main/default/objects/amc__Learning__c/fields/amc__Retrospective__c.field-meta.xml
<CustomField>
    <fullName>amc__Retrospective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Retrospective this Learning relates to</inlineHelpText>
    <label>Retrospective</label>
    <referenceTo>amc__Retrospective__c</referenceTo>
    <relationshipLabel>Learnings</relationshipLabel>
    <relationshipName>Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>